# intellity-back-final

./: .gitignore  Dockerfile  README.md  alembic.ini  backup.sh  docker-compose.yml  generate_sitemap.py  init_db.py  nginx.conf  pyproject.toml  requirements.txt  restore_db.sh  sitemap.xml  unset.sh
ProdDatabase/: Dockerfile  docker-compose.yml
database/: Dockerfile  docker-compose.yml
devAlembic/: env.py  sborshik.py
devAlembic/versions/: 08f07b030d17_.py  0a09f247b530_.py  134bd1787333_.py  163287492934_.py  17d9ee3e7a48_.py  197077db5d87_.py  19dd7008bbb0_.py  1d0e9e7f39bb_.py  25eed1e3402b_.py  2b39ccc3420b_.py  2bda1e869dcf_.py  2f7d88050025_.py  2f93e5ddbb8f_.py  32675db869b4_.py  3584b96c6bac_.py  3923788845c5_.py  3ce3b31be7eb_.py  3e5e0537a623_.py  3ee0457194f2_.py  3fb59a9b16a1_.py  403049cb8caf_.py  434ba63d0c2c_.py  465851d90fcc_.py  467afe637409_.py  4736bdff0c71_.py  47a9cfaaa135_.py  49089bdc20bf_.py  4bb28cd02d3e_.py  4e1a5eb7aa18_.py  5446635306c6_.py  583a7fd1e299_.py  5e64a904cb4a_.py  6274d86a4e4b_.py  6909e68a3d35_.py  6e8413512528_.py  73ecd6d0aa7f_.py  80395eb5ad37_.py  83fe970a969e_.py  87a88a7c80a6_.py  87ec460cefa3_.py  (+54 more)
intellity_back_final/: Minio.py  admin.py  auth.py  config.py  database.py  handlers.py  main.py
intellity_back_final/crud/: basic_lms_crud.py  checker_course_lms_crud.py  lms_crud.py  student_lms_crud.py  teacher_lms_crud.py  user_crud.py
intellity_back_final/fixtures_and_autocreates/: role_init.py
nginx/: nginx.conf
prodAlembic/: env.py
testbase/: Dockerfile  docker-compose.yml
(+27 files in other folders)
