[tool.poetry]
name = "intellity-back-final"
version = "0.1.0"
description = ""
authors = ["Борис Богатырев <twoballs20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
pillow = "^10.3.0"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
aiosmtplib = "^3.0.1"
pydantic-settings = "^2.3.3"
sqladmin = {extras = ["full"], version = "^0.17.0"}
minio = "^7.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
